# leptos_toaster

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  builtin_toast.css
.github/workflows/: general.yml
.zed/: settings.json
examples/basic/: Cargo.toml  Trunk.toml  index.html
examples/basic/src/: main.rs
src/: builtin_toast.css  lib.rs  mount_style.rs  style.css  toast.rs  toast_container.rs  toast_id.rs  toaster.rs  types.rs
