[package]
name = "leptos_toaster"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/SorenHolstHansen/leptos_toaster"
license = "MIT"
description = "A Toaster component for Leptos"
keywords = ["leptos", "toaster", "toast"]
authors = ["Søren H. Hansen"]

exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3"
leptos = { version = "0.6", features = ["nightly"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["EventTarget", "HtmlElement", "DomRect", "Element"] }

[features]
# Enables the built-in <Toast /> component
builtin_toast = []

