[package]
name = "leptos_toaster"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/SorenHolstHansen/leptos_toaster"
license = "MIT"
description = "A Toaster component for Leptos"
keywords = ["leptos", "toaster", "toast"]
authors = ["Søren H. Hansen"]

exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
leptos = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["EventTarget", "HtmlElement", "DomRect", "Element"] }

[features]
# Enables the built-in <Toast /> component
builtin_toast = []
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
